# irregular-domain-decomposition

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  Cell.hpp  Communicator.cpp  Communicator.hpp  DiffusiveOptimizer.cpp  Domain.cpp  Domain.hpp  GeometricUtils.cpp  GeometricUtils.hpp  Partition.cpp  Partition.hpp  README.md  Utils.cpp  Utils.hpp  adlbirreg  adlbirreg.cbp  comm.cpp  lb_calls.txt  main.cpp  plot_grid.py  test_communcation  vcumtimes.txt  vtimes.txt
include/: CLIParser.hpp  Cell.hpp  Communicator.hpp  DiffusiveOptimizer.hpp  Domain.hpp  GeometricUtils.hpp  Partition.hpp  SimulationParams.hpp  SlidingWindow.hpp  Types.hpp  Utils.hpp  generate.hpp  initial_conditions.hpp  ljpotential.hpp  physics.hpp  spatial_elements.hpp  zupply.hpp
src/: CLIParser.cpp  CMakeLists.txt  Cell.cpp  Domain.cpp  GeometricUtils.cpp  Partition.cpp  Types.cpp  Utils.cpp  adlbirreg  main.cpp  test_communcation  zupply.cpp
test/: CMakeLists.txt  TestA  TestLinearHashMapUtils  TestLinearHashMapUtils.cpp  TestLocalIDComputation.cpp  test1.cpp
